--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,24 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Fjalla One', sans-serif;
-    
+    font-family: 'Mitr', sans-serif;
+    font-size: 18px;
 }
 
 body {
-    background-image:url(../assets/img/bibliotecajpg.jpg);
+    background-color: white;
     color: white;
 }
 
 
 .navBarLista {
-    display: inline;
+    
+    display: inline-block;
     padding: 5px;
     margin: 0 auto;
     text-decoration: none;
     color: white;
-    background-color: rgb(32, 32, 32);;
+    background-color: rgb(82, 82, 82);
      border-radius: 5px;
 
 }
@@ -31,17 +32,26 @@ a{
 
 
 main {
-    background-color:rgb(175, 122, 100);
+    background-color:#203239;
     
     margin: 0 30px;
     border-radius: 8px;
     border-style: double;
-    border-width: 5px;
+    border-width: 8px;
     
 }
+
+
 header {
+    background-color: #141E27;
     padding: 30px;
-        text-align: center;
+    text-align: center;
+    margin: 30px 30px;
+    border-radius: 8px;
+    border-width: 8px;
+    border-style: double;
+    border-color: white;
+
 }
 
 h1{
@@ -52,6 +62,7 @@ h1{
     padding: 3px 8px;
     color: white;
     margin-bottom: 5px;
+    font-size: 22px;
 } 
 
 h2 {
@@ -62,6 +73,15 @@ h2 {
     color: white;
     margin-bottom: 10px;
     
+}
+
+h3 {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 25px;
+    margin: 7px 0px;
+
 }
 
 
@@ -88,19 +108,54 @@ aside li {
     padding: 10px;
 }
 
+div ul li {
+    list-style: none;
+    padding: 5px 5px;
+}
+
+ a{
+     color: white;
+ }
+
+.contenidoGeneral{
+    display: inline-block;
+     border-radius: 10px;
+    border-style: solid;
+    border-color: white;
+    margin: 100px 10px;
+}
+
+.categorias {
+    text-align: center;
+}
 
 
 
 .footer {
-    background-color: rgb(175, 122, 100);
+    background-color: lightblue;
     margin: 20px 30px;
     border-radius: 8px;
     border-style: double;
-    border-width: 5px;
+    border-width: 8px;
+    color: black;
 }
 
 footer h4 {
-    margin: 10px;
+    margin-left: 170px;
+}
+
+
+
+.facebook{
+    padding: 10px 50px;
+}
+
+.goodreads {
+    padding: 10px 50px;
+}
+
+.instagram {
+    padding: 10px 50px;
 }
 
 .divPrincipal {
@@ -110,7 +165,7 @@ footer h4 {
     grid-template-rows: auto;
     grid-template-areas: 
     "titulo titulo titulo ."
-    "imagen descripcion . aside"
+    "imagen descripcion descripcion aside"
     "texto texto texto aside"
  
     ;
@@ -121,6 +176,7 @@ footer h4 {
     text-align: center;
 
 }
+
 
 .resumen {
     grid-area: descripcion;
@@ -144,6 +200,7 @@ footer h4 {
     
 }
 
+
 .texto h4 {
     text-align: center;
     padding-bottom: 10px;
@@ -152,24 +209,56 @@ footer h4 {
     grid-area: aside;
     padding: 40px;
         border-style: solid;
-        margin: 10px;
-        background-image: url(../assets/img/bibliotecajpg.jpg);
+        margin: 30px;
+    background-color: #141E27;
 
    
 }
+
+.asideReseñas {
+    margin: 5px;
+   
+}
+
+.divPrincipal--Nosotros{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    " quienes  quienes aside"
+    " textoNos textoNos aside"
+    " textoNos textoNos aside"
+    ;
+}
+
+.quienes {
+    grid-area: quienes;
+    text-align: center;
+}
+
+.textoNosotros {
+    grid-area: textoNos;
+    padding: 20px;
+}
+
+.aside {
+    grid-area: aside;
+}
+
+
  
 aside ul li  {
     display:inline-block;
-    background-color: rgb(32, 32, 32);
+    padding-left: 20px;
+    color: white;    
     
-    border-radius: 5px;
 }
 
 aside h4 {
-    display: inline;
-    background-color: rgb(32, 32, 32);
-    border-radius: 5px;
-    
+    display: inline-block;
+    margin: 10px;
+        
 }
 
 
@@ -178,9 +267,7 @@ aside ul a{
     transform: scale(1.1);
 }
 
-.ordenAlf {
-    text-decoration: none;
-}
+
 
 .facebook:hover {
     transform: scale(1.1);
@@ -190,6 +277,7 @@ aside ul a{
 .goodreads:hover {
     transform: scale(1.1);
     transition-duration: 0.7s;
+    
 }
 
 .instagram:hover {
@@ -321,7 +409,7 @@ aside ul a{
 
     .facebook {
         height: 80px;
-
+      
     }
 
     .goodreads{
@@ -333,4 +421,29 @@ aside ul a{
     }
 
 
+    .divPrincipal--Nosotros{
+        display: grid;
+        gap: 10px;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: auto;
+        grid-template-areas: 
+        " quienes   "
+        " textoNos  "
+        " textoNos  "
+        "aside"
+        ;
+    }
+    .quienes {
+        grid-area: quienes;
+        text-align: center;
+    }
+    
+    .textoNosotros {
+        grid-area: textoNos;
+        padding: 20px;
+    }
+    
+    .aside {
+        grid-area: aside;
+    }
 }
