--- a/css/style.css
+++ b/css/style.css
@@ -1,449 +1,1 @@
-* {
-    padding: 0;
-    margin: 0;
-    font-family: 'Mitr', sans-serif;
-    font-size: 18px;
-}
-
-body {
-    background-color: white;
-    color: white;
-}
-
-
-.navBarLista {
-    
-    display: inline-block;
-    padding: 5px;
-    margin: 0 auto;
-    text-decoration: none;
-    color: white;
-    background-color: rgb(82, 82, 82);
-     border-radius: 5px;
-
-}
-
-
-
-a{
-    text-decoration: none;
-}
-
-
-
-main {
-    background-color:#203239;
-    
-    margin: 0 30px;
-    border-radius: 8px;
-    border-style: double;
-    border-width: 8px;
-    
-}
-
-
-header {
-    background-color: #141E27;
-    padding: 30px;
-    text-align: center;
-    margin: 30px 30px;
-    border-radius: 8px;
-    border-width: 8px;
-    border-style: double;
-    border-color: white;
-
-}
-
-h1{
-    display: inline-block;
-    margin: 0 auto;
-    background-color: rgb(32, 32, 32);;
-    border-radius: 8px;
-    padding: 3px 8px;
-    color: white;
-    margin-bottom: 5px;
-    font-size: 22px;
-} 
-
-h2 {
-    display: inline-block;
-    background-color: rgb(32, 32, 32);
-    border-radius: 5px;
-    padding: 5px 8px;
-    color: white;
-    margin-bottom: 10px;
-    
-}
-
-h3 {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    font-size: 25px;
-    margin: 7px 0px;
-
-}
-
-
- 
-aside li {
-    list-style: none;
-    padding: 3px;
-    padding-left: 10px;
-}
-
- .ultimaReseña{
-     margin: 5px;
-     text-align: center;
- }
-
- .tituloMiniReseña {
-     margin: 5px;
-     text-align: center;
- }
-
-
-.resumenLi {
-    list-style:inside;
-    padding: 10px;
-}
-
-div ul li {
-    list-style: none;
-    padding: 5px 5px;
-}
-
- a{
-     color: white;
- }
-
-.contenidoGeneral{
-    display: inline-block;
-     border-radius: 10px;
-    border-style: solid;
-    border-color: white;
-    margin: 100px 10px;
-}
-
-.categorias {
-    text-align: center;
-}
-
-
-
-.footer {
-    background-color: lightblue;
-    margin: 20px 30px;
-    border-radius: 8px;
-    border-style: double;
-    border-width: 8px;
-    color: black;
-}
-
-footer h4 {
-    margin-left: 170px;
-}
-
-
-
-.facebook{
-    padding: 10px 50px;
-}
-
-.goodreads {
-    padding: 10px 50px;
-}
-
-.instagram {
-    padding: 10px 50px;
-}
-
-.divPrincipal {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: auto;
-    grid-template-areas: 
-    "titulo titulo titulo ."
-    "imagen descripcion descripcion aside"
-    "texto texto texto aside"
- 
-    ;
-}
-
-.tituloLibro {
-    grid-area: titulo;
-    text-align: center;
-
-}
-
-
-.resumen {
-    grid-area: descripcion;
-      
-}
-
-.imgResumen {
-    grid-area: imagen;
-   border-style: solid;
-    margin-left: 150px;
-    border-radius: 8px;
-
-
-}
-
-
-
-.texto {
-    grid-area: texto;
-    padding: 20px 30px;
-    
-}
-
-
-.texto h4 {
-    text-align: center;
-    padding-bottom: 10px;
-}
-.aside {
-    grid-area: aside;
-    padding: 40px;
-        border-style: solid;
-        margin: 30px;
-    background-color: #141E27;
-
-   
-}
-
-.asideReseñas {
-    margin: 5px;
-   
-}
-
-.divPrincipal--Nosotros{
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: auto;
-    grid-template-areas: 
-    " quienes  quienes aside"
-    " textoNos textoNos aside"
-    " textoNos textoNos aside"
-    ;
-}
-
-.quienes {
-    grid-area: quienes;
-    text-align: center;
-}
-
-.textoNosotros {
-    grid-area: textoNos;
-    padding: 20px;
-}
-
-.aside {
-    grid-area: aside;
-}
-
-
- 
-aside ul li  {
-    display:inline-block;
-    padding-left: 20px;
-    color: white;    
-    
-}
-
-aside h4 {
-    display: inline-block;
-    margin: 10px;
-        
-}
-
-
-aside ul a{
-    color: white;
-    transform: scale(1.1);
-}
-
-
-
-.facebook:hover {
-    transform: scale(1.1);
-    transition-duration: 0.7s;
-}
-
-.goodreads:hover {
-    transform: scale(1.1);
-    transition-duration: 0.7s;
-    
-}
-
-.instagram:hover {
-    transform: scale(1.1);
-    transition-duration: 0.7s;
-}
-
-.imgResumen:hover {
-    transform: scale(1.1);
-    transition-duration: 0.7s;
-}
-
-@media (max-width:992px) {
-
-    .divPrincipal {
-        display: grid;
-        gap: 10px;
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "titulo  ."
-        "imagen   ."
-        "descripcion aside"
-        "texto   aside"
-        "texto  ."
-     
-        ;
-    }
-    
-    .tituloLibro {
-        grid-area: titulo;
-        text-align: center;
-    
-    }
-    
-    .resumen {
-        grid-area: descripcion;
-          
-    }
-
-    .imgResumen {
-        grid-area: imagen;       
-        margin-left: 150px;
-        border-radius: 8px;
-        height: 200px;
-
-    }
-
-    .texto {
-        grid-area: texto;
-        padding: 20px 30px;
-        
-    }
-    .texto h4 {
-        text-align: center;
-        padding-bottom: 10px;
-    }
-    .aside {
-       
-        grid-area: aside;
-        padding: 10px;
-        border-style: solid;
-        margin: 10px;
-       
-    }
-
-    .imgResumen:hover {
-        transform: scale(2.1);
-        transition-duration: 0.7s;
-    }
-
-}
-
-@media (max-width:560px) {
-    .divPrincipal {
-        display: grid;
-        gap: 10px;
-        grid-template-columns: repeat(1,1fr);
-        grid-template-rows: auto;
-        grid-template-areas: 
-        "titulo "
-        "imagen "
-        "descripcion "
-        "texto " 
-        "texto  "
-        "aside"
-     
-        ;
-    }
-
-    .tituloLibro {
-        grid-area: titulo;
-        text-align: center;
-    
-    }
-    
-    .resumen {
-        grid-area: descripcion;
-          
-    }
-
-    .imgResumen {
-        grid-area: imagen;       
-        margin-left: 150px;
-        border-radius: 8px;
-        height: 200px;
-
-    }
-
-    .texto {
-        grid-area: texto;
-        padding: 20px 30px;
-        
-    }
-    .texto h4 {
-        text-align: center;
-        padding-bottom: 10px;
-    }
-    .aside {
-        grid-area: aside;
-        padding: 30px;
-       
-    }
-
-    .imgResumen:hover {
-        transform: scale(2.1);
-        transition-duration: 0.7s;
-    }
-
-    .facebook {
-        height: 80px;
-      
-    }
-
-    .goodreads{
-        height: 80px;
-    }
-
-    .instagram {
-        height: 80px;
-    }
-
-
-    .divPrincipal--Nosotros{
-        display: grid;
-        gap: 10px;
-        grid-template-columns: repeat(1,1fr);
-        grid-template-rows: auto;
-        grid-template-areas: 
-        " quienes   "
-        " textoNos  "
-        " textoNos  "
-        "aside"
-        ;
-    }
-    .quienes {
-        grid-area: quienes;
-        text-align: center;
-    }
-    
-    .textoNosotros {
-        grid-area: textoNos;
-        padding: 20px;
-    }
-    
-    .aside {
-        grid-area: aside;
-    }
-}
+﻿*{padding:0;margin:0;font-family:"Mitr",sans-serif}body{background-color:#fff;color:#fff;font-size:18px}.parrafo,.texto{line-height:1.5;margin:0 auto}.bt-Facebook{background-color:#3b5998;padding:7px;color:#fff;border-radius:5px;font-size:16px;cursor:pointer}.bt-Goodreads{background-color:#bc9c7c;padding:7px;color:#fff;border-radius:5px;font-size:16px;cursor:pointer}.bt-Instagram{background-color:#eb4f62;padding:7px;color:#fff;border-radius:5px;font-size:16px;cursor:pointer}header{background-color:#202020;padding:30px;text-align:center;margin:30px 30px;border-radius:8px;border-width:8px;border-style:double;border-color:#fff}header h1{display:inline-block;margin:0 auto;background-color:#202020;border-radius:8px;padding:3px 8px;color:#fff;margin-bottom:5px;font-size:25px}header h2{display:inline-block;background-color:#202020;border-radius:5px;padding:5px 8px;color:#fff;margin-bottom:10px;font-size:20px}header .navBarLista{display:inline-block;padding:5px;margin:0 auto;text-decoration:none;color:#fff;background-color:#525252;border-radius:5px}main{background-color:#203239;margin:0 30px;border-radius:8px;border-style:double;border-width:8px}main h3{display:block;margin:0 auto;text-align:center;font-size:25px;margin:7px 0px}main .texto h4{text-align:center;padding-bottom:10px}main .ordenAlf div ul li{list-style:none;padding:5px;text-align:center}main aside h4{display:inline-block;margin:10px}main aside div ul{display:inline-block;padding-left:20px;color:#fff}main aside div li{list-style:none;padding:3px;padding-left:10px}main aside div a{text-decoration:none;color:#fff;transform:scale(1.1)}.ultimaReseña{margin:5px;text-align:center}.tituloMiniReseña{margin:5px;text-align:center}.resumenLi{list-style:inside;padding:10px}.contenidoGeneral{display:inline-block;border-radius:10px;border-style:solid;border-color:#fff;margin:100px 10px}.categorias{text-align:center}.divPrincipal{display:grid;gap:10px;grid-template-columns:repeat(4, 1fr);grid-template-rows:auto;grid-template-areas:"titulo titulo titulo ." "imagen descripcion descripcion aside" "texto texto texto aside"}.tituloLibro{grid-area:titulo;text-align:center}.resumen{grid-area:descripcion}.imgResumen{grid-area:imagen;border-style:solid;margin-left:150px;border-radius:8px}.texto{grid-area:texto;padding:20px 30px}.aside{grid-area:aside;padding:40px;border-style:solid;margin:30px;background-color:#141e27}.asideReseñas{margin:5px;text-decoration:none;text-decoration-color:none}.divPrincipal--Nosotros{display:grid;gap:10px;grid-template-columns:repeat(3, 1fr);grid-template-rows:auto;grid-template-areas:" quienes  quienes aside" " textoNos textoNos aside" " textoNos textoNos aside"}.quienes{grid-area:quienes;text-align:center}.textoNosotros{grid-area:textoNos;padding:20px}.aside{grid-area:aside}@media(max-width: 992px){.divPrincipal{display:grid;gap:10px;grid-template-columns:repeat(2, 1fr);grid-template-rows:auto;grid-template-areas:"titulo  ." "imagen   ." "descripcion aside" "texto   aside" "texto  ."}.tituloLibro{grid-area:titulo;text-align:center}.resumen{grid-area:descripcion}.imgResumen{grid-area:imagen;margin-left:150px;border-radius:8px;height:200px}.texto{grid-area:texto;padding:20px 30px}.texto h4{text-align:center;padding-bottom:10px}.aside{grid-area:aside;padding:10px;border-style:solid;margin:10px}.imgResumen:hover{transform:scale(1.1);transition-duration:.3s}nav ul a{display:inline-block;padding:8px 0px}}.buttons{display:none}@media(max-width: 595px){.redes{display:none}.buttons{display:inline-block;margin:10px}.divPrincipal{display:grid;gap:10px;grid-template-columns:repeat(1, 1fr);grid-template-rows:auto;grid-template-areas:"titulo " "imagen " "descripcion " "texto " "texto  " "aside"}.tituloLibro{grid-area:titulo;text-align:center}.resumen{grid-area:descripcion}.imgResumen{grid-area:imagen;margin-left:150px;border-radius:8px;height:200px}.texto{grid-area:texto;padding:20px 30px}.texto h4{text-align:center;padding-bottom:10px}.aside{grid-area:aside;padding:30px}.facebook{height:80px}.goodreads{height:80px}.instagram{height:80px}.divPrincipal--Nosotros{display:grid;gap:10px;grid-template-columns:repeat(1, 1fr);grid-template-rows:auto;grid-template-areas:" quienes   " " textoNos  " " textoNos  " "aside"}.quienes{grid-area:quienes;text-align:center}.textoNosotros{grid-area:textoNos;padding:20px}.aside{grid-area:aside}}a{text-decoration:none;color:#fff}a:hover{cursor:pointer;color:orange}.imgResumen:hover{transform:scale(1.1);transition-duration:.4s;border-style:double}.footer{background-color:#add8e6;margin:20px 30px;border-radius:8px;border-style:double;border-width:8px;color:#000}footer h4{margin-left:170px}.redes{margin-top:5px;padding:10px 50px}.redes:hover{transform:scale(1.1);transition-duration:2s;cursor:pointer}
